--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@vuepress/plugin-search": "^2.0.0-beta.60",
     "vue": "^3.2.45",
     "vuepress": "^2.0.0-beta.60",
+    "vuepress-plugin-blog2": "^2.0.0-beta.174",
     "vuepress-plugin-components": "^2.0.0-beta.173",
     "vuepress-plugin-photo-swipe": "^2.0.0-beta.151",
-    "vuepress-plugin-search-pro": "^2.0.0-beta.172",
+    "vuepress-plugin-search-pro": "^2.0.0-beta.174",
     "vuepress-theme-hope": "2.0.0-beta.151"
   }
 }
